# family-reading

./: .dockerignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
backend/: .env  .env.example  .gitignore  Dockerfile  FEATURES.md  README.md  TESTING.md  TODO.md  debug.md  download_swagger_ui.sh  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  main.py
backend/app/db/: database.py  models.py
backend/app/routers/: __init__.py  auth.py  book_copies.py  books.py  dashboard.py  families.py  readings.py  web.py
backend/app/services/: book_provider.py  isbn.py
backend/app/templates/: base.html  books.html  dashboard.html  login.html  members.html  no_family.html  readings.html
backend/app/utils/: family_auth.py
backend/data/: app.db
backend/static/css/: web.css
backend/tests/: check_web_routes.py  conftest.py
backend/tests/api/: __init__.py  test_auth.py  test_book_copies.py  test_books.py  test_dashboard.py  test_families.py  test_readings.py  test_web.py
backend/tests/services/: __init__.py  test_auth.py  test_isbn.py
docs/: DESIGN.md  TODO.md  deploy.md
miniprogram/: app.json  app.wxss  jest.config.js  package.json  project.config.json
miniprogram/__mocks__/: wx.js
miniprogram/__tests__/: api.test.js  page_logic.test.js  setup.js
miniprogram/pages/home/: index.js  index.json  index.wxml
miniprogram/pages/login/: index.js  index.json  index.wxml  index.wxss
miniprogram/pages/reading_detail/: index.js  index.wxml  index.wxss
miniprogram/pages/scan_add/: index.js  (+3 more)
miniprogram/utils/: api.js  config.js
(+6 files in other folders)
