[project]
name = "family-reading-backend"
version = "0.1.0"
description = "Family reading log backend (FastAPI)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlmodel>=0.0.22",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

